--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -10,6 +10,9 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 near-sdk = "1.0.1"
 
+[dependencies.borsh]
+version = "0.7.0"
+
 [profile.release]
 codegen-units = 1
 # Tell `rustc` to optimize for small code size.
