--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "html-to-draftjs": "1.5.0",
     "immutability-helper": "3.0.2",
     "leaflet": "1.6.0",
-    "near-api-js": "^0.29.0",
+    "near-cli": "^1.2.0",
+    "near-sdk-as": "^2.1.0",
     "react": "16.13.1",
     "react-apexcharts": "1.3.7",
     "react-big-calendar": "0.24.6",
@@ -72,10 +73,12 @@
     "yup": "0.28.5"
   },
   "scripts": {
-    "prestart": "npm run build:contract && npm run dev:deploy:contract",
+    "cleanup": "rm -rf ./out && rm -f ./neardev/dev-account && rm -rf ./contract/target/",
+    "prestart": "npm run cleanup && npm run build:contract && npm run dev:deploy:contract && npm run build:contract:name",
     "start": "env-cmd -f ./neardev/dev-account.env react-scripts start",
     "build": "npm run build:contract && react-scripts build",
     "build:contract": "node ./contract/build",
+    "build:contract:name" : "sh ./contract_name.sh",
     "build:web": "parcel build src/index.html --public-url ./",
     "dev:deploy:contract": "near dev-deploy",
     "deploy:contract": "near deploy",
@@ -115,22 +118,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "env-cmd": "^10.1.0",
     "eslint": "6.6.0",
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-unused-imports": "0.1.3",
+    "gh-pages": "^3.0.0",
+    "node-sass": "4.14.1",
+    "nodemon": "^2.0.3",
+    "parcel-bundler": "^1.12.4",
     "prettier": "2.0.5",
     "prettier-eslint": "9.0.1",
     "prettier-eslint-cli": "5.0.0",
-    "node-sass": "4.14.1",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "gh-pages": "^3.0.0",
-    "near-cli": "^1.0.1",
-    "nodemon": "^2.0.3",
-    "parcel-bundler": "^1.12.4",
     "react-test-renderer": "^16.13.1",
-    "env-cmd": "^10.1.0",
     "shelljs": "^0.8.4"
   }
 }
