--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -9,7 +9,9 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 near-sdk = "1.0.1"
-borsh = "0.7.0"
+
+[dependencies.borsh]
+version = "0.7.0"
 
 [profile.release]
 codegen-units = 1
