--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-circular-progressbar": "2.0.3",
     "react-color": "2.18.1",
     "react-contextmenu": "2.13.0",
+    "react-cookie": "^4.0.3",
     "react-copy-to-clipboard": "5.0.2",
     "react-countup": "4.3.3",
     "react-cropper": "1.3.0",
