--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 near-sdk = "1.0.1"
+serde = { version = "1.0", features = ["derive"] }
 
 [dependencies.borsh]
 version = "0.7.0"
