--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-to-draftjs": "1.5.0",
     "immutability-helper": "3.0.2",
     "ipfs": "^0.52.0",
+    "js-base64": "^3.6.0",
     "leaflet": "1.6.0",
     "near-cli": "^1.2.0",
     "near-sdk-as": "^2.1.0",
